# TASTES

./: .gitignore  CMakeLists.txt  README.md  main.cpp
classes/: Position.h  Stock.h  Trader.h
classes/source/: Position.cpp  Stock.cpp  Trader.cpp
